--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<html>
+  <head>
+    <script>
+      if (window.location.protocol == "http") window.location.href = "https" + window.location.href.slice(4);
+    </script>
+  </head>
+  <body>
+    Hello World
+  </body>
+</html>
