--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ layout: default
 
   <p>
     JavaScript Enthusiasts * Change Makers * Friends and Visionaries * Community Builders<br><br>
-    This event is for you.<br><br>
-    Social coding * Workshops * Networking * Challenges
+    Social coding * Workshops * Networking * Challenges<br><br>
+    This event is about you.
   </p>
 
   <section class="countdown" id="js-countdown">
