change dom elements

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="hero">
+<article class="hero">
 
   <h1 class="hero-headline">JSHacks</h1>
 
@@ -43,7 +43,7 @@ layout: default
     {% endif %}
   </ul>
 
-</section>
+</article>
 
 {% comment %}
 
