--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ layout: default
   <h3 class="hero-location">Bucharest - Chisinau</h3>
 
   <p class="hero-body">
-    JavaScript Enthusiasts * Change Makers * Friends and Visionaries * Community Builders<br><br>
-    Social coding * Workshops * Networking * Challenges<br><br>
+    JavaScript Enthusiasts • Change Makers • Friends and Visionaries • Community Builders<br><br>
+    Social coding • Workshops • Networking • Challenges<br><br>
     This event is about you.
   </p>
 
