add padding to body

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@ layout: default
   </h1>
 
 
-  <h2 class="hero-date">22-23 Octomber 2016</h2>
+  <h2 class="hero-date">21-23 Octomber 2016</h2>
 
   <h3 class="hero-location">Bucharest - Chisinau</h3>
 
   <p class="hero-body">
-    JavaScript Enthusiasts * Change Makers * Friends and Visionaries * Community Builders<br><br>
-    Social coding * Workshops * Networking * Challenges<br><br>
-    This event is about you.
+    JSHacks is an event dedicated to JavaScript developers and their communities.<br><br>
+    It’s aim is to foster the ever growing network of developers, bridge geographical sparse and niched communities, enable learning through knowledge sharing activities and finally empower participants to be social champions by tackling society’s biggest issues through 24h coding challenges.
   </p>
+
+
 
   <section class="countdown" id="js-countdown">
     <div class="countdown-segment">
