--- a/index.html
+++ b/index.html
@@ -2,72 +2,4 @@
 layout: default
 ---
 
-<article class="hero">
-
-  <h1 class="hero-headline">
-    {% include icon-logo.svg %}
-    <b class="hero-headlineText">{{ site.title }}</b>
-  </h1>
-
-
-  <h2 class="hero-date">21-23 Octomber 2016</h2>
-
-  <h3 class="hero-location">Bucharest - Chisinau</h3>
-
-  <p class="hero-body">
-    JSHacks is an event dedicated to JavaScript developers and their communities.<br><br>
-    It’s aim is to foster the ever growing network of developers, bridge geographical sparse and niched communities, enable learning through knowledge sharing activities and finally empower participants to be social champions by tackling society’s biggest issues through 24h coding challenges.
-  </p>
-
-  <section class="countdown" id="js-countdown">
-    <div class="countdown-segment">
-      <span class="countdown-time js-countdown-days"></span>
-      <span class="countdown-label">Days</span>
-    </div>
-
-    <div class="countdown-segment">
-      <span class="countdown-time js-countdown-hours"></span>
-      <span class="countdown-label">Hours</span>
-    </div>
-
-    <div class="countdown-segment">
-      <span class="countdown-time js-countdown-minutes"></span>
-      <span class="countdown-label">Minutes</span>
-    </div>
-
-    <div class="countdown-segment">
-      <span class="countdown-time js-countdown-seconds"></span>
-      <span class="countdown-label">Seconds</span>
-    </div>
-
-  </section>
-
-  <ul class="social">
-    {% if site.github_username %}
-    <li>
-      {% include icon-github.html username=site.github_username %}
-    </li>
-    {% endif %}
-
-    {% if site.twitter_username %}
-    <li>
-      {% include icon-twitter.html username=site.twitter_username %}
-    </li>
-    {% endif %}
-
-    {% if site.facebook_username %}
-    <li>
-      {% include icon-facebook.html username=site.facebook_username %}
-    </li>
-    {% endif %}
-  </ul>
-
-</article>
-
-{% comment %}
-
-
-  <p>[email form -> integrated with mailing list (e.g. MailChimp / SendGrid / etc)]</p>
-
-  <p>[Share on Facebook, Twitter icons]</p>
-{% endcomment %}
+{% include sections/hero.html %}
