Restructure Project + Initial menu design

--- a/index.html
+++ b/index.html
@@ -3,3 +3,9 @@ layout: default
 ---
 
 {% include sections/hero.html %}
+
+{% include sections/about.html %}
+
+{% include sections/agenda.html %}
+
+{% include sections/sponsors.html %}
