menu functionality complete mobile

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ layout: default
 
 {% include sections/hero.html %}
 
+{% include sections/idea.html %}
+
 {% include sections/about.html %}
 
 {% include sections/agenda.html %}
