remove file structure

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 
-{% include sections/hero.html %}
+{% include hero.html %}
 
-{% include sections/idea.html %}
+{% include idea.html %}
 
-{% include sections/about.html %}
+{% include about.html %}
 
-{% include sections/agenda.html %}
+{% include agenda.html %}
 
-{% include sections/sponsors.html %}
+{% include sponsors.html %}
