--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ layout: default
 
 {% include hero.html %}
 
-{% include idea.html %}
+{% include jshacks.html %}
 
-{% include about.html %}
+{% include story.html %}
 
 {% include agenda.html %}
 
