Index.html copy updated

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ permalink: /
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
           <h1 class="animated fadeInUp">JS HACKS <br> BUCHAREST & CHISINAU </h1>
-          <p class="animated fadeInUp">21-23 October, 2016.<br/> <a href="https://bucharest.jshacks.io" style="margin-bottom: 10px;">Register for Bucharest</a> | <a href="https://chisinau.jshacks.io">Register for Chisinau</a></p>
+          <p class="animated fadeInUp">21-23 October, 2016<br/> <a href="https://bucharest.jshacks.io" style="margin-bottom: 10px;">JS Hacks Bucharest</a> | <a href="https://chisinau.jshacks.io">JS Hacks Chisinau</a></p>
         </div>
       </div>
     </div>
