--- a/index.html
+++ b/index.html
@@ -17,3 +17,49 @@ permalink: /
     </div>
   </div>
 </section>
+
+<!-- Wrapper Start -->
+<section id="intro">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7 col-sm-12">
+        <div class="block">
+          <a name="about"></a>
+          <div class="section-title">
+            <h2>What is JS Hacks?</h2>
+          </div>
+          <p>
+            <strong>JSHacks</strong> is an event dedicated to JavaScript developers and their communities.<br/><br/>
+
+            The social coding experience is the central hub of the event and the main driver of collaboration and knowledge sharing while hands-on mentorship, workshops, trainings, talks and an event-ready development infrastructure provide the means. <br/><br/>
+
+            Its aim is to foster the ever growing network of developers, bridge geographical sparse and niched communities, enable learning through knowledge sharing activities and finally empower participants to be social champions by tackling society's biggest issues through 48h coding challenges. <br/><br/>
+
+            The first edition takes place on the 21-23 October, in two locations simultaneously: <a href="http://bucharest.jshacks.io" style="font-size: 16px;">Bucharest/Romania</a> & <a href="http://chisinau.jshacks.io" style="font-size: 16px;">Chisinau/Moldova</a>.
+          </p>
+
+        </div>
+      </div><!-- .col-md-7 close -->
+      <div class="col-md-5 col-sm-12">
+        <div class="block">
+          <img src="img/wrapper-img.png" alt="Img">
+        </div>
+      </div><!-- .col-md-5 close -->
+    </div>
+  </div>
+</section>
+
+<!-- Call to action Start -->
+<section id="call-to-action">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="block">
+          <h2>Make friends, make products, make a difference ... </h2>
+          <a class="btn btn-default btn-call-to-action" href="http://bucharest.jshacks.io/" >Learn more about JS Hacks Bucharest</a>
+          <a class="btn btn-default btn-call-to-action" href="http://chisinau.jshacks.io/" >Learn more about JS Hacks Chisinau</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
