Removed learn more from buttons

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ permalink: /
       <div class="col-md-12">
         <div class="block">
           <h2>Make friends, make products, make a difference ... </h2>
-          <a class="btn btn-default btn-call-to-action" href="http://bucharest.jshacks.io/" >Learn more about JS Hacks Bucharest</a>
-          <a class="btn btn-default btn-call-to-action" href="http://chisinau.jshacks.io/" >Learn more about JS Hacks Chisinau</a>
+          <a class="btn btn-default btn-call-to-action" href="http://bucharest.jshacks.io/" >JS Hacks Bucharest</a>
+          <a class="btn btn-default btn-call-to-action" href="http://chisinau.jshacks.io/" >JS Hacks Chisinau</a>
         </div>
       </div>
     </div>
