Changed landing page with new design

--- a/index.html
+++ b/index.html
@@ -4,14 +4,37 @@ title: JS HACKS
 permalink: /
 ---
 
+<div class="overlay-stars stars"></div>
 <!-- Slider Start -->
 <section id="slider">
   <div class="container">
     <div class="row">
-      <div class="col-md-10 col-md-offset-2">
+      <div class="col-md-12">
         <div class="block">
-          <h1 class="animated fadeInUp">JS HACKS <br> BUCHAREST & CHISINAU </h1>
-          <p class="animated fadeInUp">21-23 October, 2016<br/> <a href="https://bucharest.jshacks.io" style="margin-bottom: 10px;">JS Hacks Bucharest</a> | <a href="https://chisinau.jshacks.io">JS Hacks Chisinau</a></p>
+          <div class="row">
+             <div class="col-md-12">
+               <h1 class="animated fadeInUp">JS HACKS BUCHAREST - CHISINAU</h1>
+               <h3>JavaScript Enthusiasts * Change Makers * Friends and Visionaries * Community Builders</h3>
+               <h3>This event is for you.</h3>
+             </div>
+             <div class="col-md-6 col-sm-6 text-right text-turquoise">
+               <p class="animated fadeInUp">21-23 October</p>
+             </div>
+             <div class="col-md-6 col-sm-6 text-left text-orange">
+               <p class="animated fadeInUp">Bucharest + Chisinau</p>
+             </div>
+             <div class="row">
+               <div class="col-md-6 reg-btn text-right">
+                 <a class="btn-pink" href="https://bucharest.jshacks.io">JSHacks Bucharest</a></p>
+               </div>
+               <div class="col-md-6 reg-btn text-left">
+                 <a class="btn-orange" href="https://chisinau.jshacks.io">JSHacks Chisinau</a></p>
+               </div>
+             </div>
+              <div class="col-md-12">
+                <a href="#challenges"><img src="img/icons/rocket.svg" class="down-rocket svg"></a>
+              </div>
+          </div>
         </div>
       </div>
     </div>
@@ -19,7 +42,7 @@ permalink: /
 </section>
 
 <!-- Wrapper Start -->
-<section id="intro">
+<section id="intro" class="stars">
   <div class="container">
     <div class="row">
       <div class="col-md-7 col-sm-12">
@@ -27,6 +50,7 @@ permalink: /
           <a name="about"></a>
           <div class="section-title">
             <h2>What is JS Hacks?</h2>
+            <img src="{{ site.baseurl }}/img/rocket.png">
           </div>
           <p>
             <strong>JSHacks</strong> is an event dedicated to JavaScript developers and their communities.<br/><br/>
@@ -40,26 +64,38 @@ permalink: /
 
         </div>
       </div><!-- .col-md-7 close -->
-      <div class="col-md-5 col-sm-12">
-        <div class="block">
-          <img src="img/wrapper-img.png" alt="Img">
-        </div>
+      <div class="col-md-5 col-sm-12 text-right">
+       <img class="side-icon svg" src="{{ site.baseurl }}/img/icons/astronaut.svg">
       </div><!-- .col-md-5 close -->
     </div>
   </div>
 </section>
 
 <!-- Call to action Start -->
-<section id="call-to-action">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h2>Make friends, make products, make a difference ... </h2>
-          <a class="btn btn-default btn-call-to-action" href="http://bucharest.jshacks.io/" >JS Hacks Bucharest</a>
-          <a class="btn btn-default btn-call-to-action" href="http://chisinau.jshacks.io/" >JS Hacks Chisinau</a>
-        </div>
+<section id="agenda" class="stars">
+<div class="container">
+  <div class="row">
+    <a name="challenges"></a>
+     <div class="row">
+      <div class="section-title text-center">
+        <h2>JOIN US !</h2>
+        <img src="{{ site.baseurl }}/img/rocket.png">
       </div>
     </div>
+    <div class="row text-center">
+      <div class="col-md-12">
+       <p>Make friends, make products, make a difference ...</p>
+      </div>
+      <div class="row">
+       <div class="col-md-6 reg-btn text-right">
+         <a class="btn-pink" href="https://bucharest.jshacks.io">JSHacks Bucharest</a></p>
+       </div>
+       <div class="col-md-6 reg-btn text-left">
+         <a class="btn-orange" href="https://chisinau.jshacks.io">JSHacks Chisinau</a></p>
+       </div>
+     </div>
+      
+    </div>
   </div>
+</div>
 </section>
