Minor css fixes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ permalink: /
 
             Its aim is to foster the ever growing network of developers, bridge geographical sparse and niched communities, enable learning through knowledge sharing activities and finally empower participants to be social champions by tackling society's biggest issues through 48h coding challenges. <br/><br/>
 
-            The first edition takes place on the 21-23 October, in two locations simultaneously: <a href="http://bucharest.jshacks.io" style="font-size: 16px;">Bucharest/Romania</a> & <a href="http://chisinau.jshacks.io" style="font-size: 16px;">Chisinau/Moldova</a>.
+            The first edition takes place on the 21-23 October, in two locations simultaneously: 
+            <a href="http://bucharest.jshacks.io" class="text-turquoise">Bucharest/Romania</a> & 
+            <a href="http://chisinau.jshacks.io" class="text-orange">Chisinau/Moldova</a>.
           </p>
 
         </div>
