--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
     <meta property="og:url" content="http://jshacks.io">
     <meta property="og:description" content="Romania's JS Hackathon">
     <meta property="og:type" content="website">
+
+
+    <!-- Source Sans Pro -->
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:600,700,900' rel='stylesheet' type='text/css'>
+
   </head>
   <body>
     <div class="wrapper stars"></div>
     <nav class="fadeinlast">
-      <a href="http://2016.jshacks.io"><span class="arrow"> &lt; </span> 2016 JSHacks</a>
+      <a href="http://2016.jshacks.io">
+        <h2 class="text-white"><span class="reversed"> ➔ </span> 2016 JSHacks </h2>
+      </a>
+      <div class="white-block"></div>
     </nav>
     <header class="savethedate">
       <img src="img/logo_simple.png" class="Logo">
@@ -26,14 +34,16 @@
       </h2>
     </header>
     <main class="center">
+      <div class="icon-wrapper">
+        <img src="img/saturn.svg" />
+      </div>
       <form action="http://jshacks.us14.list-manage.com/subscribe/post?u=a3d7139a19cd3c8996995dcaf&amp;id=d8dd1bc83f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form validate" target="_blank" novalidate>
-
 
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a3d7139a19cd3c8996995dcaf_d8dd1bc83f" tabindex="-1" value=""></div>
 
         <div class="form-signup">
           <input id="mce-EMAIL" type="email" value="" name="EMAIL" placeholder="Email address" required="" class="form-input email">
-          <input id="mc-embedded-subscribe" type="submit" value="Subscribe" name="subscribe" class="form-submit button">
+          <input id="mc-embedded-subscribe" type="submit" value="Subscribe" name="subscribe" class="form-submit button btn-pink">
         </div>
         <div id="mce-responses" class="clear">
             <div class="response" id="mce-error-response" style="display:none"></div>
